--- a/index.html
+++ b/index.html
@@ -6,9 +6,38 @@
     <title>HTML Lab</title>
 </head>
 <body>
-<h1>My site!</h1>
-<h2>Увидела как просто?</h2>
-<p>ENJOI! =)</p>
-<p>Внесла какието изминения.</p>
+<h1>Privet, Dimka<3</h1>
+<h2>Zapolni ankety i poly4i kanfety^^</h2>
+<form>
+    <p><label for="nickname">Ваше имя:</label></p>
+    <input type="text" id="nickname" name="nickname">
+    <p><label for="surname">Ваша фамилия:</label></p>
+    <input type="text" id="surname" name="surname">
+    <p><label for="age">Ваш возраст:</label></p>
+    <input type="text" id="age" name="age">
+    <p><label for="sex">Пол:</label></p>
+    <select id="sex" name="sex">
+        <option>Мужской</option>
+        <option>Женский</option>
+        <option>Не скажу</option>
+    </select>
+    <p><label for="occupation">Род деятельности:</label></p>
+    <select id="occupation" name="occupation">
+        <option>Питонист</option>
+        <option>Java-деятель</option>
+        <option>Паскаль или другое</option>
+    </select>
+    <p><label for="feelings">Любит Катю:</label></p>
+    <input type="checkbox" id="feelings" name="feelings">
+    <p><label for="character">Личные качества:</label></p>
+    <select id="character" name="character">
+        <option>Розумничка</option>
+        <option>Хороша киця</option>
+        <option>Красавчик</option>
+        <p class="send">
+        <input type="submit" value="Отправить">
+        </p>
+    </select>
+</form>
 </body>
 </html>
