добавила пару чекбоксов для предпочтений.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         <option>Паскаль или другое</option>
     </select>
 
-    <p><label for="feelings">Любит Катю:</label></p>
-    <input type="checkbox" id="feelings" name="feelings">
+    <p><input type="checkbox" id="feelings" name="feelings"><label for="feelings">Любит Катю</label></p>
+    <p><input type="checkbox" id="food_feelings" name="food_feelings"><label for="food_feelings">Любит покушать</label></p>
+    <p><input type="checkbox" id="like_animals" name="like_animals"><label for="like_animals">Любит животных</label></p>
 
     <p><label for="character">Личные качества:</label></p>
     <select id="character" name="character">
